--- a/index.html
+++ b/index.html
@@ -151,171 +151,174 @@
     <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/examples/js/controls/OrbitControls.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script>
-        function animationsfortext(){
-          
-          document.getElementsByClassName("content")[0].style.height =  "100%"
+        function animationsfortext() {
+            document.getElementsByClassName("content")[0].style.height = "100%";
         }
-        setTimeout(()=>{
-            animationsfortext()
-        },100)
-       
-  </script>
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-          const scene = new THREE.Scene();
-          const camera = new THREE.PerspectiveCamera(75, window.innerWidth / 2 / window.innerHeight, 0.1, 1000);
-          const renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
-
-          const container = document.getElementById('model-container');
-          renderer.setSize(container.clientWidth, container.clientHeight);
-          container.appendChild(renderer.domElement);
-
-          const light = new THREE.PointLight(0xffffff, 1, 100);
-          light.position.set(0, -18, 10);
-          scene.add(light);
-
-          const loader = new THREE.OBJLoader();
-          let coin;
-
-          loader.load('./Coin.obj', (object) => {
-              const goldMaterial = new THREE.MeshStandardMaterial({
-                  color: 0xffd700, // Gold color
-                  metalness: 0.4, // Fully metallic
-                  roughness: 0.1, // Smooth surface
-              });
-
-              // Apply the gold material to the loaded object
-              object.traverse((child) => {
-                  if (child.isMesh) {
-                      child.material = goldMaterial;
-                  }
-              });
-              coin = object;
-              scene.add(coin);
-
-              coin.position.set(50, -50, 1); // Start from bottom right
-              coin.rotation.set(0, 0, 0);
-
-              coin.scale.set(1.2, 1.2, 1.2); // Increase size
-
-              const starGeometry = new THREE.BufferGeometry();
-              const starMaterial = new THREE.PointsMaterial({ color: 0xffd700, size: 0.2 });
-              const starCount = 3000; // Adjust the number of stars as needed
-
-              const starPositions = new Float32Array(starCount * 3);
-              for (let i = 0; i < starCount; i++) {
-                  starPositions[i * 3] = (Math.random() - 0.5) * 100;
-                  starPositions[i * 2+ 1] = (Math.random() - 0.5) * 100;
-                  starPositions[i * 3 + 2] = (Math.random() - 0.5) * 100;
-              }
-
-              starGeometry.setAttribute('position', new THREE.BufferAttribute(starPositions, 3));
-              const stars = new THREE.Points(starGeometry, starMaterial);
-              scene.add(stars);
-
-              // Animation to center
-              const targetPosition = { x: 30, y: -10 }; // Target position for both coin and stars
-
-              gsap.to(coin.position, {
-                  x: targetPosition.x,
-                  y: targetPosition.y,
-                  duration: 3.5,
-                  ease: "power2.out",
-              });
-
-              gsap.to(stars.position, {
-                  x: targetPosition.x,
-                  y: targetPosition.y,
-                  duration: 3.5,
-                  ease: "power2.out",
-                  onComplete: () => {
-                      // Start rotating the stars after they reach the center
-                      gsap.to(stars.rotation, { y: Math.PI * 1.25, duration: 20, ease: "none", repeat: -1 });
-                  }
-              });
-
-              // Continuous slow rotation of the coin
-              gsap.to(coin.rotation, { y: Math.PI * 1.5, duration: 20, ease: "none", repeat: -1 });
-          });
-
-          camera.position.z = 70; // Adjust camera distance for larger object
-
-          const animate = () => {
-              requestAnimationFrame(animate);
-              renderer.render(scene, camera);
-          };
-
-          animate();
-
-          // Handle window resize
-          window.addEventListener('resize', () => {
-              camera.aspect = container.clientWidth / container.clientHeight;
-              camera.updateProjectionMatrix();
-              renderer.setSize(container.clientWidth, container.clientHeight);
-          });
-
-          // Add mouse movement listener
-          window.addEventListener('mousemove', (event) => {
-              if (coin) {
-                  const mouseX = (event.clientX / window.innerWidth) * 2 - 1;
-                  const mouseY = -(event.clientY / window.innerHeight) * 2 + 1;
-
-                  gsap.to(coin.rotation, {
-                      x: mouseY * 0.5,
-                      y: mouseX * 0.5,
-                      duration: 0.5,
-                      ease: "power2.out",
-                  });
-              }
-          });
-
-          // Crystal breaking effect
-          function triggerBreakingEffect() {
-              const particleCount = 1000;
-              const particles = new THREE.Geometry();
-              const particleMaterial = new THREE.PointsMaterial({
-                  color: 0x9ac3ff,
-                  size: 0.5,
-                  transparent: true,
-                  opacity: 0.8,
-              });
-
-              for (let i = 0; i < particleCount; i++) {
-                  const particle = new THREE.Vector3(
-                      coin.position.x + (Math.random() - 0.5) * 2,
-                      coin.position.y + (Math.random() - 0.5) * 2,
-                      coin.position.z + (Math.random() - 0.5) * 2
-                  );
-                  particles.vertices.push(particle);
-              }
-
-              const particleSystem = new THREE.Points(particles, particleMaterial);
-              scene.add(particleSystem);
-
-              gsap.to(particleSystem.position, {
-                  duration: 2,
-                  ease: "power2.out",
-                  onUpdate: () => {
-                      for (let i = 0; i < particles.vertices.length; i++) {
-                          const particle = particles.vertices[i];
-                          particle.x += (Math.random() - 0.5) * 0.1;
-                          particle.y += (Math.random() - 0.5) * 0.1;
-                          particle.z += (Math.random() - 0.5) * 0.1;
-                      }
-                      particles.verticesNeedUpdate = true;
-                  },
-                  onComplete: () => {
-                      scene.remove(particleSystem);
-                  },
-              });
-          }
-
-          // Trigger the breaking effect on click
-          container.addEventListener('click', triggerBreakingEffect);
-      });
+        setTimeout(() => {
+            animationsfortext();
+        }, 1000);
     </script>
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            const scene = new THREE.Scene();
+            const camera = new THREE.PerspectiveCamera(75, window.innerWidth / 2 / window.innerHeight, 0.1, 1000);
+            const renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
 
+            const container = document.getElementById('model-container');
+            renderer.setSize(container.clientWidth, container.clientHeight);
+            container.appendChild(renderer.domElement);
 
+            const light = new THREE.PointLight(0xffffff, 1, 100);
+            light.position.set(0, -18, 10);
+            scene.add(light);
 
+            const loader = new THREE.OBJLoader();
+            let coin;
+            let stars;
+
+            loader.load('./Coin.obj', (object) => {
+                const goldMaterial = new THREE.MeshStandardMaterial({
+                    color: 0xffd700, // Gold color
+                    metalness: 0.4, // Fully metallic
+                    roughness: 0.1, // Smooth surface
+                });
+
+                // Apply the gold material to the loaded object
+                object.traverse((child) => {
+                    if (child.isMesh) {
+                        child.material = goldMaterial;
+                    }
+                });
+                coin = object;
+                scene.add(coin);
+
+                coin.position.set(50, -50, 1); // Start from bottom right
+                coin.rotation.set(0, 0, 0);
+
+                coin.scale.set(1.2, 1.2, 1.2); // Increase size
+
+                const starGeometry = new THREE.BufferGeometry();
+                const starMaterial = new THREE.PointsMaterial({ color: 0xffd700, size: 0.2 });
+                const starCount = 3000; // Adjust the number of stars as needed
+
+                const starPositions = new Float32Array(starCount * 3);
+                for (let i = 0; i < starCount; i++) {
+                    starPositions[i * 3] = (Math.random() - 0.5) * 100;
+                    starPositions[i * 3 + 1] = (Math.random() - 0.5) * 100;
+                    starPositions[i * 3 + 2] = (Math.random() - 0.5) * 100;
+                }
+
+                starGeometry.setAttribute('position', new THREE.BufferAttribute(starPositions, 3));
+                stars = new THREE.Points(starGeometry, starMaterial);
+                scene.add(stars);
+
+                // Animation to center
+                const targetPosition = { x: 30, y: -10 }; // Target position for both coin and stars
+
+                gsap.to(coin.position, {
+                    x: targetPosition.x,
+                    y: targetPosition.y,
+                    duration: 3.5,
+                    ease: "power2.out",
+                });
+
+                gsap.to(stars.position, {
+                    x: targetPosition.x,
+                    y: targetPosition.y,
+                    duration: 3.5,
+                    ease: "power2.out",
+                    onComplete: () => {
+                        // Start rotating the stars after they reach the center
+                        gsap.to(stars.rotation, { y: Math.PI * 1.25, duration: 20, ease: "none", repeat: -1 });
+                    }
+                });
+
+                // Continuous slow rotation of the coin
+                gsap.to(coin.rotation, { y: Math.PI * 1.5, duration: 20, ease: "none", repeat: -1 });
+            });
+
+            camera.position.z = 70; // Adjust camera distance for larger object
+
+            const animate = () => {
+                requestAnimationFrame(animate);
+                renderer.render(scene, camera);
+            };
+
+            animate();
+
+            // Handle window resize
+            window.addEventListener('resize', () => {
+                camera.aspect = container.clientWidth / container.clientHeight;
+                camera.updateProjectionMatrix();
+                renderer.setSize(container.clientWidth, container.clientHeight);
+            });
+
+            // Add mouse movement listener
+            window.addEventListener('mousemove', (event) => {
+                if (coin && stars) {
+                    const mouseX = (event.clientX / window.innerWidth) * 2 - 1;
+                    const mouseY = -(event.clientY / window.innerHeight) * 2 + 1;
+
+                    gsap.to(coin.rotation, {
+                        x: mouseY * 0.5,
+                        y: mouseX * 0.5,
+                        duration: 0.5,
+                        ease: "power2.out",
+                    });
+
+                    gsap.to(stars.position, {
+                        x: mouseX * 10,
+                        y: mouseY * 10,
+                        duration: 0.5,
+                        ease: "power2.out",
+                    });
+                }
+            });
+
+            // Crystal breaking effect
+            function triggerBreakingEffect() {
+                const particleCount = 1000;
+                const particles = new THREE.Geometry();
+                const particleMaterial = new THREE.PointsMaterial({
+                    color: 0x9ac3ff,
+                    size: 0.5,
+                    transparent: true,
+                    opacity: 0.8,
+                });
+
+                for (let i = 0; i < particleCount; i++) {
+                    const particle = new THREE.Vector3(
+                        coin.position.x + (Math.random() - 0.5) * 2,
+                        coin.position.y + (Math.random() - 0.5) * 2,
+                        coin.position.z + (Math.random() - 0.5) * 2
+                    );
+                    particles.vertices.push(particle);
+                }
+
+                const particleSystem = new THREE.Points(particles, particleMaterial);
+                scene.add(particleSystem);
+
+                gsap.to(particleSystem.position, {
+                    duration: 2,
+                    ease: "power2.out",
+                    onUpdate: () => {
+                        for (let i = 0; i < particles.vertices.length; i++) {
+                            const particle = particles.vertices[i];
+                            particle.x += (Math.random() - 0.5) * 0.1;
+                            particle.y += (Math.random() - 0.5) * 0.1;
+                            particle.z += (Math.random() - 0.5) * 0.1;
+                        }
+                        particles.verticesNeedUpdate = true;
+                    },
+                    onComplete: () => {
+                        scene.remove(particleSystem);
+                    },
+                });
+            }
+
+            // Trigger the breaking effect on click
+            container.addEventListener('click', triggerBreakingEffect);
+        });
+    </script>
 </body>
 </html>
