--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Three.js 3D Model with Cold Color</title>
+    <title>Three.js 3D Bitcoin Model</title>
     <style>
         body {
             margin: 0;
@@ -167,7 +167,7 @@
             renderer.setSize(container.clientWidth, container.clientHeight);
             container.appendChild(renderer.domElement);
 
-            const light = new THREE.PointLight(0xffffff, 1, 100);
+            const light = new THREE.PointLight(0xadd8e6, 0.5, 100); // Light blue light with reduced intensity
             light.position.set(0, -18, 10);
             scene.add(light);
 
@@ -176,7 +176,7 @@
             let twinkling = false;
             let rotateDirection = 1;
 
-            loader.load('Coin.obj', (object) => {
+            loader.load('BITCOIN.obj', (object) => { // Load the Bitcoin OBJ file
                 const vertices = [];
                 object.traverse((child) => {
                     if (child.isMesh) {
@@ -189,13 +189,13 @@
 
                 const pointGeometry = new THREE.BufferGeometry();
                 pointGeometry.setAttribute('position', new THREE.Float32BufferAttribute(vertices, 3));
-                const pointMaterial = new THREE.PointsMaterial({ color: 0xffd700, size: Math.random() * 0.1 + 0.0005 });
+                const pointMaterial = new THREE.PointsMaterial({ color: 0xffd700, size: Math.random() * 0.1 + 0.005 });
 
                 coin = new THREE.Points(pointGeometry, pointMaterial);
                 scene.add(coin);
                 coin.position.set(1000, -1000, 0); // Start from bottom right
                 coin.rotation.set(0, 0, 0);
-                coin.scale.set(0.8, 0.8, 0.8);
+                coin.scale.set(2, 2, 2);
 
                 const starGeometry = new THREE.BufferGeometry();
                 const starMaterial = new THREE.ShaderMaterial({
@@ -223,11 +223,11 @@
                     transparent: true,
                 });
 
-                const starCount = 3000; // Adjust the number of stars as needed
+                const starCount = 5000; // Adjust the number of stars as needed
                 const starPositions = new Float32Array(starCount * 3);
                 for (let i = 0; i < starCount; i++) {
-                    starPositions[i * 3] = (Math.random() - 0.5) * 100;
-                    starPositions[i * 3 + 1] = (Math.random() - 0.5) * 100;
+                    starPositions[i * 3] = (Math.random() - 0.5) * 200;
+                    starPositions[i * 3 + 1] = (Math.random() - 0.5) * 200;
                     starPositions[i * 3 + 2] = (Math.random() - 0.5) * 100;
                 }
                 starGeometry.setAttribute('position', new THREE.BufferAttribute(starPositions, 3));
@@ -235,7 +235,7 @@
                 scene.add(stars);
 
                 // Animation to center
-                const targetPosition = { x: 30, y: -12 };
+                const targetPosition = { x: 30, y: 4 };
                 gsap.to(coin.position, {
                     x: targetPosition.x,
                     y: targetPosition.y,
